feat: init auth module
