# apps/api/src/auth/dto/login.dto.ts
@@ -1,29 +1,12 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsEmail, IsString, IsStrongPassword } from 'class-validator';
+import { IsEmail, IsString } from 'class-validator';
 
 export class LoginDto {
   @ApiProperty({ example: 'user@example.com' })
   @IsEmail()
   email: string;
 
-  @ApiProperty({
-    example: 'Password1!',
-    minLength: 8,
-    description:
-      'Min 8 characters, at least one letter, one number, one special character',
-  })
+  @ApiProperty({ example: 'your-password' })
   @IsString()
-  @IsStrongPassword(
-    {
-      minLength: 8,
-      minLowercase: 1,
-      minNumbers: 1,
-      minSymbols: 1,
-    },
-    {
-      message:
-        'Password must contain at least one letter, one number and one special character',
-    },
-  )
   password: string;
 }
